<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.hackerkernel.loginregisterwithparse.HomeActivity">

    <!-- Toolbar -->
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        />
    <!-- /Toolbar -->

    <TableLayout
        android:id="@+id/table"
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:stretchColumns="1">

        <TableRow android:layout_marginBottom="10dp">
            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="wrap_content"
                android:text="@string/fullname"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="wrap_content"
                android:gravity="right"
                android:text="Husain saify"
                android:id="@+id/homeFullname"/>
        </TableRow>

        <TableRow android:layout_marginBottom="10dp">
            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="wrap_content"
                android:text="@string/emailaddress"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="wrap_content"
                android:gravity="right"
                android:text="Husain saify"
                android:id="@+id/homeEmail"/>
        </TableRow>

        <TableRow android:layout_marginBottom="10dp">
            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="wrap_content"
                android:text="@string/phonenumber"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="wrap_content"
                android:gravity="right"
                android:text="Husain saify"
                android:id="@+id/homePhone"/>
        </TableRow>

    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Logout"
        android:id="@+id/logout"
        android:layout_below="@+id/table"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
